# web-readable

./: .gitignore  Cargo.toml  README.md  contentRule.md  give_up_vite.md  index.d.ts  index.js  markdownRule.md  package.json
.github/workflows/: release.yml
src/: dom.rs  dynamic.rs  error.rs  extractor.rs  lib.rs  markdown.rs  model.rs  napi_api.rs  scoring.rs
tests/: extractor.rs  markdown.rs
tests/fixtures/: article_semantic.html  gigazine_like_article.html  impress_news_2110950.html  markdown_mathml.html  noise_links.html
